Fixes issue with misaligned tabs when dropdown included in app bar

--- a/src/stylesheets/_tabs.scss
+++ b/src/stylesheets/_tabs.scss
@@ -110,7 +110,8 @@
 			.icon {
 
 				position: relative;
-				top: 4px;
+				top: 2px;
+				line-height: 13px !important;
 
 			}
 
